Fin de l'ajout de l'attaque sur l'implémentation 777

--- a/Attaques/Implementation_basique/Makefile
+++ b/Attaques/Implementation_basique/Makefile
@@ -1,7 +1,12 @@
+visualisation:
+	valgrind --tool=tracergrind --output=trace.out AES/aes 0123456789ABCDEF0123456789ABCDEF
+	sqlitetrace trace.out trace.db
+	tracegraph trace.db
+
 attaque: clean
 	./enregistrement_traces.py
 	../../Utiles/daredevil -c mem_data*.attack_after_sbox.config
 
 
 clean:
-	rm -f mem* stack* trace*.bin trace*.grind
+	rm -f mem* stack* trace*
